# BADGER

./: .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  README.md
badger/: install.sh  pyproject.toml  pytest.ini
badger/envs/: badger-0.4.0.post-deploy.sh  badger-0.4.0.yml  badger-0.4.1.post-deploy.sh  badger-0.4.1.yml  badger-0.4.2.yml  badger-0.5.0.yml  badger-0.5.1.post-deploy.sh  badger-0.5.1.yml
badger/src/badger/: __main__.py  archive.py  badger.py  constants.py  logger.py  loop_pipeline.py  module_components.py  rerun.py  run.py  setup.py  smk_handler.py  unpack.py
badger/src/badger-plots/: badger-plots.R
badger/src/badger-plots/badger.plots/: .Rbuildignore  .lintr  DESCRIPTION  NAMESPACE  README.md
badger/src/badger-plots/badger.plots/R/: cli-generate-input.R  cli-helpers.R  cli-main.R  cli-plot-results.R  cli-template.R  critical_z_value.R  fbeta.R  get_accuracy_statistics.R  get_performance_index.R  globals.R  parse_correctkin_results.R  parse_grups_results.R  parse_input_yaml.R  parse_kin_results.R  parse_pedigree_codes.R  parse_read_result.R  parse_tkgwv2_results.R  plot-histogram.R  plot_accuracy.R  plot_misincorporation.R  plot_oci.R  r_coef_to_prediction.R  read_tarballed_files.R  rlabel_to_rcoef.R  validate_dataset_row_count.R
badger/src/badger-plots/badger.plots/tests/: testthat.R
badger/src/badger-plots/envs/: badger-plots.post-deploy.sh  badger-plots.yml
badger/tests/: conftest.py  test_badger-plots.py  test_badger_cli.py
badger/tests/test-data/: test-archives.tar.xz
config/: config.yml  netrules.yml  test-config.yml
(+156 files in other folders)
